# SecKubeGPT

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  negative-cases.yml  prompt.py  pyproject.toml  requirements.txt  utils.py
.github/: FUNDING.yml
.github/workflows/: py.yaml
prompt/: __init__.py  _expert.py  _expert.yaml  _pss.py  _pss.yaml  _spec.py  _types.py
