[tool.poetry]
name = "seckubegpt"
version = "0.0.1"
description = ""
authors = ["hbc <me@hbc.rocks>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7" # NOTE: streamlit.app uses 3.9.16
streamlit = "^1.30.0"
openai = "^0.27.6"
guidance = "^0.0.57"
pyyaml = "^6.0"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
